crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__binary_expr-2.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: module
---
Binary(
    Binary {
        op: Sub,
        left: GetVar(
            GetVar {
                name: "a",
            },
        ),
        right: GetVar(
            GetVar {
                name: "b",
            },
        ),
    },
)
