crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__binary_expr-3.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: module
---
Binary(
    Binary {
        op: Div,
        left: GetVar(
            GetVar {
                name: "a",
            },
        ),
        right: GetVar(
            GetVar {
                name: "b",
            },
        ),
    },
)
